--- a/index.html
+++ b/index.html
@@ -6,33 +6,37 @@
 </head>
 
 <body>
-  <h1>Saleh Hamadeh</h1>
+  <header>
+    <h1>Saleh Hamadeh</h1>
+    <ul>
+      <li><a href="#education">Education</a></li>
+    </ul>
+  </header>
   
-  <body>
-    <section>
-      <h2>Education</h2>
-      <h3>Georgia Institute of Technology</h3>
-      <p>Spring 2014 - Present</p>
-      <p>B.S. Computer Science, Devices and Modeling / Simulation</p>
-
-      <h3>Kennesaw State University</h3>
-      <p>Fall 2012 - Fall 2013</p>
-    </section>
-
-    <section>
-      <h2>Experience</h2>
-    </section>
-
-    <section>
-      <h2>Skills</h2>
-    </section>
-
-    <section>
-      <h2>Projects</h2>
-    </section>
-
-    <section>
-      <h2>Leadership</h2>
-    </section>
+  <section id="education">
+    <h2>Education</h2>
+    <h3>Georgia Institute of Technology</h3>
+    <p>Spring 2014 - Present</p>
+    <p>B.S. Computer Science, Devices and Modeling / Simulation</p>
+    
+    <h3>Kennesaw State University</h3>
+    <p>Fall 2012 - Fall 2013</p>
+  </section>
+  
+  <section>
+    <h2>Experience</h2>
+  </section>
+  
+  <section>
+    <h2>Skills</h2>
+  </section>
+  
+  <section>
+    <h2>Projects</h2>
+  </section>
+  
+  <section>
+    <h2>Leadership</h2>
+  </section>
 </body>
 </html>
