--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Saleh Hamadeh</h1>
     <ul>
       <li><a href="#education">Education</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#leadership">Leadership</a></li>
     </ul>
   </header>
   
@@ -23,19 +26,19 @@
     <p>Fall 2012 - Fall 2013</p>
   </section>
   
-  <section>
+  <section id="experience">
     <h2>Experience</h2>
   </section>
   
-  <section>
+  <section id="skills">
     <h2>Skills</h2>
   </section>
   
-  <section>
+  <section id="projects">
     <h2>Projects</h2>
   </section>
   
-  <section>
+  <section id="leadership">
     <h2>Leadership</h2>
   </section>
 </body>
